docs: :zap: Cree una carpeta para las imagenes del notebook

--- a/Diccionarios.ipynb
+++ b/Diccionarios.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Basic Dictionary Operations</h1>"
+    "Basic Dictionary Operations\n",
+    "![tabla de opeaciones basicas](./diccionarios.png)"
    ]
   },
   {
